Tests/PassParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Pass.g 2012-04-05 20:58:03

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class PassParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEDENT", "INDENT", "LT", "ID", "CMP", "BOP", "NUMBER", "STRING", "ARITH_ASSIGN", "EXPONENT", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'('", "','", "')'", "'~'", "'break'", "'return'", "'+'", "'-'", "'*'", "'/'", "'%'", "'['", "']'", "'.'", "'for'", "'in'", "'while'", "'if'", "'else'", "'='", "'{'", "'}'", "':'"
    };
    public static final int EOF=-1;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int DEDENT=4;
    public static final int INDENT=5;
    public static final int LT=6;
    public static final int ID=7;
    public static final int CMP=8;
    public static final int BOP=9;
    public static final int NUMBER=10;
    public static final int STRING=11;
    public static final int ARITH_ASSIGN=12;
    public static final int EXPONENT=13;
    public static final int COMMENT=14;
    public static final int WS=15;
    public static final int ESC_SEQ=16;
    public static final int HEX_DIGIT=17;
    public static final int UNICODE_ESC=18;
    public static final int OCTAL_ESC=19;

    // delegates
    // delegators


        public PassParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PassParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PassParser.tokenNames; }
    public String getGrammarFileName() { return "Pass.g"; }



    // $ANTLR start "prog"
    // Pass.g:76:1: prog : block EOF ;
    public final void prog() throws RecognitionException {
        try {
            // Pass.g:76:5: ( block EOF )
            // Pass.g:76:9: block EOF
            {
            pushFollow(FOLLOW_block_in_prog35);
            block();

            state._fsp--;
            if (state.failed) return ;
            match(input,EOF,FOLLOW_EOF_in_prog37); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "block"
    // Pass.g:79:1: block : ( stmt | LT )+ ;
    public final void block() throws RecognitionException {
        try {
            // Pass.g:80:5: ( ( stmt | LT )+ )
            // Pass.g:80:9: ( stmt | LT )+
            {
            // Pass.g:80:9: ( stmt | LT )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||(LA1_0>=NUMBER && LA1_0<=STRING)||LA1_0==20||(LA1_0>=24 && LA1_0<=25)||LA1_0==34||(LA1_0>=36 && LA1_0<=37)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==LT) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // Pass.g:80:10: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_block57);
            	    stmt();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // Pass.g:80:15: LT
            	    {
            	    match(input,LT,FOLLOW_LT_in_block59); if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "block"


    // $ANTLR start "stmt"
    // Pass.g:83:1: stmt : ( expr LT | control );
    public final void stmt() throws RecognitionException {
        try {
            // Pass.g:83:5: ( expr LT | control )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||(LA2_0>=NUMBER && LA2_0<=STRING)||LA2_0==20||(LA2_0>=24 && LA2_0<=25)) ) {
                alt2=1;
            }
            else if ( (LA2_0==34||(LA2_0>=36 && LA2_0<=37)) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // Pass.g:83:9: expr LT
                    {
                    pushFollow(FOLLOW_expr_in_stmt79);
                    expr();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,LT,FOLLOW_LT_in_stmt81); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:84:9: control
                    {
                    pushFollow(FOLLOW_control_in_stmt91);
                    control();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stmt"


    // $ANTLR start "iblock"
    // Pass.g:87:1: iblock : INDENT block DEDENT ;
    public final void iblock() throws RecognitionException {
        try {
            // Pass.g:88:5: ( INDENT block DEDENT )
            // Pass.g:88:9: INDENT block DEDENT
            {
            match(input,INDENT,FOLLOW_INDENT_in_iblock117); if (state.failed) return ;
            pushFollow(FOLLOW_block_in_iblock119);
            block();

            state._fsp--;
            if (state.failed) return ;
            match(input,DEDENT,FOLLOW_DEDENT_in_iblock121); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "iblock"


    // $ANTLR start "args"
    // Pass.g:91:1: args : '(' ( argument ( ',' argument )* )? ')' ;
    public final void args() throws RecognitionException {
        try {
            // Pass.g:91:5: ( '(' ( argument ( ',' argument )* )? ')' )
            // Pass.g:91:9: '(' ( argument ( ',' argument )* )? ')'
            {
            match(input,20,FOLLOW_20_in_args135); if (state.failed) return ;
            // Pass.g:91:13: ( argument ( ',' argument )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID||(LA4_0>=NUMBER && LA4_0<=STRING)||LA4_0==20) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Pass.g:91:14: argument ( ',' argument )*
                    {
                    pushFollow(FOLLOW_argument_in_args138);
                    argument();

                    state._fsp--;
                    if (state.failed) return ;
                    // Pass.g:91:23: ( ',' argument )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==21) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Pass.g:91:24: ',' argument
                    	    {
                    	    match(input,21,FOLLOW_21_in_args141); if (state.failed) return ;
                    	    pushFollow(FOLLOW_argument_in_args143);
                    	    argument();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,22,FOLLOW_22_in_args149); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "args"


    // $ANTLR start "func"
    // Pass.g:94:1: func : args '~' ( expr | ( LT iblock ) ) ;
    public final void func() throws RecognitionException {
        try {
            // Pass.g:94:5: ( args '~' ( expr | ( LT iblock ) ) )
            // Pass.g:94:9: args '~' ( expr | ( LT iblock ) )
            {
            pushFollow(FOLLOW_args_in_func167);
            args();

            state._fsp--;
            if (state.failed) return ;
            match(input,23,FOLLOW_23_in_func169); if (state.failed) return ;
            // Pass.g:94:18: ( expr | ( LT iblock ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||(LA5_0>=NUMBER && LA5_0<=STRING)||LA5_0==20||(LA5_0>=24 && LA5_0<=25)) ) {
                alt5=1;
            }
            else if ( (LA5_0==LT) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // Pass.g:94:19: expr
                    {
                    pushFollow(FOLLOW_expr_in_func172);
                    expr();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:94:24: ( LT iblock )
                    {
                    // Pass.g:94:24: ( LT iblock )
                    // Pass.g:94:25: LT iblock
                    {
                    match(input,LT,FOLLOW_LT_in_func175); if (state.failed) return ;
                    pushFollow(FOLLOW_iblock_in_func177);
                    iblock();

                    state._fsp--;
                    if (state.failed) return ;

                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "func"


    // $ANTLR start "expr"
    // Pass.g:97:1: expr : ( ( ID ( access )? ( '=' | ARITH_ASSIGN ) )=> ID ( access )? assign | ( args '~' )=> func | short_stmt | bool );
    public final void expr() throws RecognitionException {
        try {
            // Pass.g:97:5: ( ( ID ( access )? ( '=' | ARITH_ASSIGN ) )=> ID ( access )? assign | ( args '~' )=> func | short_stmt | bool )
            int alt7=4;
            switch ( input.LA(1) ) {
            case ID:
                {
                int LA7_1 = input.LA(2);

                if ( (synpred1_Pass()) ) {
                    alt7=1;
                }
                else if ( (true) ) {
                    alt7=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case 20:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred2_Pass()) ) {
                    alt7=2;
                }
                else if ( (true) ) {
                    alt7=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case 24:
            case 25:
                {
                alt7=3;
                }
                break;
            case NUMBER:
            case STRING:
                {
                alt7=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // Pass.g:97:9: ( ID ( access )? ( '=' | ARITH_ASSIGN ) )=> ID ( access )? assign
                    {
                    match(input,ID,FOLLOW_ID_in_expr216); if (state.failed) return ;
                    // Pass.g:97:46: ( access )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==31||LA6_0==33) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // Pass.g:97:46: access
                            {
                            pushFollow(FOLLOW_access_in_expr218);
                            access();

                            state._fsp--;
                            if (state.failed) return ;

                            }
                            break;

                    }

                    pushFollow(FOLLOW_assign_in_expr221);
                    assign();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:98:9: ( args '~' )=> func
                    {
                    pushFollow(FOLLOW_func_in_expr239);
                    func();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // Pass.g:99:9: short_stmt
                    {
                    pushFollow(FOLLOW_short_stmt_in_expr249);
                    short_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // Pass.g:100:9: bool
                    {
                    pushFollow(FOLLOW_bool_in_expr259);
                    bool();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "expr"


    // $ANTLR start "short_stmt"
    // Pass.g:103:1: short_stmt : ( return_stmt | break_stmt );
    public final void short_stmt() throws RecognitionException {
        try {
            // Pass.g:104:5: ( return_stmt | break_stmt )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==25) ) {
                alt8=1;
            }
            else if ( (LA8_0==24) ) {
                alt8=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // Pass.g:104:9: return_stmt
                    {
                    pushFollow(FOLLOW_return_stmt_in_short_stmt278);
                    return_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:105:9: break_stmt
                    {
                    pushFollow(FOLLOW_break_stmt_in_short_stmt288);
                    break_stmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "short_stmt"


    // $ANTLR start "break_stmt"
    // Pass.g:108:1: break_stmt : 'break' ;
    public final void break_stmt() throws RecognitionException {
        try {
            // Pass.g:109:5: ( 'break' )
            // Pass.g:109:9: 'break'
            {
            match(input,24,FOLLOW_24_in_break_stmt311); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "break_stmt"


    // $ANTLR start "return_stmt"
    // Pass.g:112:1: return_stmt : 'return' argument ;
    public final void return_stmt() throws RecognitionException {
        try {
            // Pass.g:113:5: ( 'return' argument )
            // Pass.g:113:9: 'return' argument
            {
            match(input,25,FOLLOW_25_in_return_stmt330); if (state.failed) return ;
            pushFollow(FOLLOW_argument_in_return_stmt332);
            argument();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "return_stmt"


    // $ANTLR start "bool"
    // Pass.g:116:1: bool : logic ( CMP logic )* ;
    public final void bool() throws RecognitionException {
        try {
            // Pass.g:116:5: ( logic ( CMP logic )* )
            // Pass.g:116:9: logic ( CMP logic )*
            {
            pushFollow(FOLLOW_logic_in_bool346);
            logic();

            state._fsp--;
            if (state.failed) return ;
            // Pass.g:116:15: ( CMP logic )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==CMP) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // Pass.g:116:16: CMP logic
            	    {
            	    match(input,CMP,FOLLOW_CMP_in_bool349); if (state.failed) return ;
            	    pushFollow(FOLLOW_logic_in_bool351);
            	    logic();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "bool"


    // $ANTLR start "logic"
    // Pass.g:119:1: logic : eval ( BOP eval )* ;
    public final void logic() throws RecognitionException {
        try {
            // Pass.g:120:5: ( eval ( BOP eval )* )
            // Pass.g:120:9: eval ( BOP eval )*
            {
            pushFollow(FOLLOW_eval_in_logic372);
            eval();

            state._fsp--;
            if (state.failed) return ;
            // Pass.g:120:14: ( BOP eval )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==BOP) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // Pass.g:120:15: BOP eval
            	    {
            	    match(input,BOP,FOLLOW_BOP_in_logic375); if (state.failed) return ;
            	    pushFollow(FOLLOW_eval_in_logic377);
            	    eval();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "logic"


    // $ANTLR start "eval"
    // Pass.g:123:1: eval : term ( ( '+' | '-' ) term )* ;
    public final void eval() throws RecognitionException {
        try {
            // Pass.g:123:5: ( term ( ( '+' | '-' ) term )* )
            // Pass.g:123:9: term ( ( '+' | '-' ) term )*
            {
            pushFollow(FOLLOW_term_in_eval393);
            term();

            state._fsp--;
            if (state.failed) return ;
            // Pass.g:123:14: ( ( '+' | '-' ) term )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( ((LA11_0>=26 && LA11_0<=27)) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // Pass.g:123:15: ( '+' | '-' ) term
            	    {
            	    if ( (input.LA(1)>=26 && input.LA(1)<=27) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return ;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_term_in_eval402);
            	    term();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "eval"


    // $ANTLR start "term"
    // Pass.g:126:1: term : factor ( ( '*' | '/' | '%' ) factor )* ;
    public final void term() throws RecognitionException {
        try {
            // Pass.g:126:5: ( factor ( ( '*' | '/' | '%' ) factor )* )
            // Pass.g:126:9: factor ( ( '*' | '/' | '%' ) factor )*
            {
            pushFollow(FOLLOW_factor_in_term418);
            factor();

            state._fsp--;
            if (state.failed) return ;
            // Pass.g:126:16: ( ( '*' | '/' | '%' ) factor )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0>=28 && LA12_0<=30)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // Pass.g:126:17: ( '*' | '/' | '%' ) factor
            	    {
            	    if ( (input.LA(1)>=28 && input.LA(1)<=30) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return ;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_factor_in_term429);
            	    factor();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "term"


    // $ANTLR start "factor"
    // Pass.g:129:1: factor : ( '(' factor_p | value );
    public final void factor() throws RecognitionException {
        try {
            // Pass.g:130:5: ( '(' factor_p | value )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==20) ) {
                alt13=1;
            }
            else if ( (LA13_0==ID||(LA13_0>=NUMBER && LA13_0<=STRING)) ) {
                alt13=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }
            switch (alt13) {
                case 1 :
                    // Pass.g:130:9: '(' factor_p
                    {
                    match(input,20,FOLLOW_20_in_factor450); if (state.failed) return ;
                    pushFollow(FOLLOW_factor_p_in_factor452);
                    factor_p();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:131:10: value
                    {
                    pushFollow(FOLLOW_value_in_factor463);
                    value();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "factor"


    // $ANTLR start "factor_p"
    // Pass.g:134:1: factor_p : ( ( args '~' )=> func ')' args | bool ')' );
    public final void factor_p() throws RecognitionException {
        try {
            // Pass.g:136:5: ( ( args '~' )=> func ')' args | bool ')' )
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==20) ) {
                int LA14_1 = input.LA(2);

                if ( (synpred3_Pass()) ) {
                    alt14=1;
                }
                else if ( (true) ) {
                    alt14=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 14, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA14_0==ID||(LA14_0>=NUMBER && LA14_0<=STRING)) ) {
                alt14=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;
            }
            switch (alt14) {
                case 1 :
                    // Pass.g:136:9: ( args '~' )=> func ')' args
                    {
                    pushFollow(FOLLOW_func_in_factor_p492);
                    func();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,22,FOLLOW_22_in_factor_p494); if (state.failed) return ;
                    pushFollow(FOLLOW_args_in_factor_p495);
                    args();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:137:9: bool ')'
                    {
                    pushFollow(FOLLOW_bool_in_factor_p505);
                    bool();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,22,FOLLOW_22_in_factor_p507); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "factor_p"


    // $ANTLR start "access"
    // Pass.g:140:1: access : ( '[' NUMBER ']' | '.' ID );
    public final void access() throws RecognitionException {
        try {
            // Pass.g:141:5: ( '[' NUMBER ']' | '.' ID )
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==31) ) {
                alt15=1;
            }
            else if ( (LA15_0==33) ) {
                alt15=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 15, 0, input);

                throw nvae;
            }
            switch (alt15) {
                case 1 :
                    // Pass.g:141:9: '[' NUMBER ']'
                    {
                    match(input,31,FOLLOW_31_in_access533); if (state.failed) return ;
                    match(input,NUMBER,FOLLOW_NUMBER_in_access535); if (state.failed) return ;
                    match(input,32,FOLLOW_32_in_access537); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:142:9: '.' ID
                    {
                    match(input,33,FOLLOW_33_in_access547); if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_access549); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "access"


    // $ANTLR start "value"
    // Pass.g:145:1: value : ( atom | ID ( mod )* );
    public final void value() throws RecognitionException {
        try {
            // Pass.g:146:5: ( atom | ID ( mod )* )
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( ((LA17_0>=NUMBER && LA17_0<=STRING)) ) {
                alt17=1;
            }
            else if ( (LA17_0==ID) ) {
                alt17=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 17, 0, input);

                throw nvae;
            }
            switch (alt17) {
                case 1 :
                    // Pass.g:146:9: atom
                    {
                    pushFollow(FOLLOW_atom_in_value568);
                    atom();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // Pass.g:147:9: ID ( mod )*
                    {
                    match(input,ID,FOLLOW_ID_in_value578); if (state.failed) return ;
                    // Pass.g:147:12: ( mod )*
                    loop16:
                    do {
                        int alt16=2;
                        int LA16_0 = input.LA(1);

                        if ( (LA16_0==20||LA16_0==31||LA16_0==33) ) {
                            alt16=1;
                        }


                        switch (alt16) {
                    	case 1 :
                    	    // Pass.g:147:12: mod
                    	    {
                    	    pushFollow(FOLLOW_mod_in_value580);
                    	    mod();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop16;
                        }
                    } while (true);


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "value"


    // $ANTLR start "mod"
    // Pass.g:150:1: mod : ( args | access );
    public final void mod() throws RecognitionException {
        try {
            // Pass.g:150:5: ( args | access )
            int alt18=2;
            int LA18_0 = input.LA(1);
